# FactorInvesting

./: factorinvesting.py  pyproject.toml
docs/source/: conf.py  references.md  refs.bib
docs/source/Autoencoder/: intro.md
docs/source/Autoencoders/: intro.md
docs/source/Background/: intro.md
docs/source/InstrumentedPCA/: intro.md
docs/source/LinearAlgebra/: intro.md
docs/source/LinearRegressions/: intro.md
docs/source/PCA/: intro.md
docs/source/TestFramework/: intro.md
docs/source/later/IPCANLP/: intro.md
docs/source/later/StateVariablesNLP/: intro.md
materials/code/: example1.py  example2.py
materials/julia/chap1/: example1.jl  example2.jl  example3.jl
materials/matlab/: det_example.m  l1_norm.m  l2_norm.m  max_norm.m  orth_math.m
materials/matlab/chap1/: example1.m  example2.m  example3.m
materials/matlab/old/: matrix_rank_example.m  trace_example.m
