[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "factorinvesting"
authors = [{name = "Lorans", email = "thomaslorans@gmail.com"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "myst-parser",
    "sphinx_book_theme",
    "nbsphinx",
    "jinja2==3.0.3",
    "sphinxcontrib-bibtex"
]